@@ -1,5 +1,9 @@
 2005-04-28  Sven Neumann  <sven@gimp.org>
 
+	* app/display/gimpdisplayshell-scale.h: corrected variable names.
+
+2005-04-28  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/jpeg/jpeg-load.c (load_image): detach from the drawable.
 
 2005-04-28  Sven Neumann  <sven@gimp.org>
